--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "path": "^0.12.7",
     "react": "^19.0.0",
