--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "node scripts/generate-story.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
+    "node-fetch": "^2.7.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
